[package]
name = "ics-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
regex = "1.6.1"
reqwest = { version = "0.11.6", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"

